--- a/2.Woche/Assets/1.-Tag/3-Flex_project/style.css
+++ b/2.Woche/Assets/1.-Tag/3-Flex_project/style.css
@@ -14,7 +14,7 @@ body * + * {
 }
 
 .container {
-    max-width: 1080px;
+    max-width: 1380px;
     margin: 0 auto; /*margin: */
 }
 
@@ -54,10 +54,40 @@ body * + * {
 
 .flex {
     display: flex;
-    border: red solid 1px;
 }
 
 .flex > * + * {
     margin-top: 0;
     margin-left: 1.5em;
+}
+
+.column-main {
+    flex: 2;
+}
+
+.column-sidebar {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.login-form h3 {
+    margin:0;
+    font-size: .9em;
+    font-weight: bold;
+    text-align:right;
+    text-transform: uppercase;
+}
+
+.login-form input:not([type=checkbox]):not([type=radio]){
+    display: block;
+    width: 100%;
+    margin-top: 0;
+}
+
+.login-form button {
+    margin-top: 1em;
+    border: 1px solid #cc6b5a;
+    background-color: white;
+    cursor: pointer;
 }
