--- a/2.Woche/Assets/5.-Tag/2-responsive_projekt/style.css
+++ b/2.Woche/Assets/5.-Tag/2-responsive_projekt/style.css
@@ -2,6 +2,12 @@
     font-size: calc(1vw + 0.6em);
 }
 
+@media (min-width: 50em) {
+    :root {
+        font-size: 1.125em;
+    }
+}
+
 *,
 *::before,
 *::after {
@@ -57,7 +63,7 @@ a:active {
 .hero {
     padding: 2em 1em;
     text-align: center;
-    background-image: url(coffee-beans.jpg);
+    background-image: url(coffee-beans-small.jpg);
     background-size: 100%;
     color: #fff;
     text-shadow: 0.1em 0.1em 0.3em;
@@ -67,6 +73,7 @@ a:active {
     .hero {
         padding: 5em 3em;
         font-size: 1.2rem;
+        background-image: url(coffee-beans-medium.jpg);
     }
 }
 
@@ -122,6 +129,17 @@ main {
     left: 0;
 }
 
+@media (min-width: 35em) {
+    .menu-toggle {
+       display:none 
+    }
+
+    .menu-dropdown {
+        display: block;
+        position: static;
+    }
+}
+
 .menu.is-open .menu-dropdown {
     display: block;
 }
@@ -149,5 +167,67 @@ main {
 @media (min-width: 35em) {
     .title > h1 {
         font-size: 2.25rem;
+    }
+
+    .nav-menu {
+        display: flex;
+        border: 0;
+        padding: 0 1em;
+    }
+
+    .nav-menu > li {
+        flex: 1;
+    }
+
+    .nav-menu > li + li {
+        border: 0;
+    }
+
+    .nav-menu > li > a {
+        padding: 0.3em;
+        text-align: center;
+    }
+}
+
+@media (min-width: 35em) {
+    .row {
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        border: #000 1px solid;
+
+        margin-left: -.075em;
+        margin-right: -.075em;
+    }
+
+    .column {
+        flex-basis: 35%;
+        flex-grow: 0;
+        flex-shrink: 0;
+        margin-left: 0.75em;
+        margin-right: 0.75em;
+    }
+
+    .middle {
+        margin-left: auto;
+    }
+}
+
+@media (min-width: 50em) {
+    .page-header {
+        padding: 1em 4em
+    }
+
+    .hero {
+        padding: 7em 6em;
+        background-image: url(coffee-beans.jpg);
+    }
+
+    .main {
+        padding: 2em 4em;
+    }
+
+    .nav-menu {
+        padding: 0 4em;
     }
 }
