--- a/3.Woche/Assets/4.-Tag/5-jquery/style.css
+++ b/3.Woche/Assets/4.-Tag/5-jquery/style.css
@@ -31,3 +31,15 @@ body {
     opacity: 1;
     outline: 2px solid #333;
 }
+
+.nav {
+    text-align: center;
+    margin-top: 0.5rem;
+}
+
+.nav button {
+    padding: .3rem .8rem;
+    margin: .3rem;
+    cursor: pointer;
+    font-size: 1.3rem;
+}
